--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="root"></div>
+
+    
+    <script src="https://cdn.botpress.cloud/webchat/v2.2/inject.js"></script>
+<script src="https://files.bpcontent.cloud/2025/01/11/23/20250111230220-G52M7HLK.js"></script>
+    
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
